src/tui/views/snapshots/runsite__tui__views__snapshot_tests__database_detail.snap
---
source: src/tui/views/snapshot_tests.rs
expression: screen
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                                                            "
" █▀▄ ▄▄█  ada@example.com · profile: default                                                                            "
"          https://api.runsite.app                                                                                       "
"┌ pg-main ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Engine     postgresql                                                                                                 │"
"│Plan       Starter                                                                                                    │"
"│Status     ● running                                                                                                  │"
"│Version    16                                                                                                         │"
"│Internal   pg-main.internal                                                                                           │"
"│External   —                                                                                                          │"
"│                                                                                                                      │"
"│CPU        7.5%                                                                                                       │"
"│Memory     40.0%                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" esc back · ? help · q quit                                                                              updated 0s ago "
