src/tui/views/snapshots/runsite__tui__views__snapshot_tests__deployment_detail.snap
---
source: src/tui/views/snapshot_tests.rs
expression: screen
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                                                            "
" █▀▄ ▄▄█  ada@example.com · profile: default                                                                            "
"          https://api.runsite.app                                                                                       "
"┌ api · ● running ─────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Overview   2 Logs   3 Deploys                                                                                      │"
"│                                                                                                                      │"
"│Deployment 3f2a9c1 · ● running  live                                                                                  │"
"│Commit     change 3f2a9c1d                                                                                            │"
"│                                                                                                                      │"
"│Step 1/3 : FROM node:22                                                                                               │"
"│Step 2/3 : RUN npm ci                                                                                                 │"
"│Step 3/3 : CMD npm start                                                                                              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" j/k scroll · B rollback · g/G top/bottom · esc back                                                     updated 0s ago "
