src/tui/views/snapshots/runsite__tui__views__snapshot_tests__help_overlay.snap
---
source: src/tui/views/snapshot_tests.rs
expression: screen
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                    "
" █▀▄ ▄▄█  ada@example.com · profile: default                                    "
"          https://api.runsite.app                                               "
"┌ Projects ────────────────────────────────────────────────────────────────────┐"
"│▸ landing                                                                    4│"
"│  blog                                                                       1│"
"│  Unassigned ┌ Keys ────────────────────────────────────────────┐            1│"
"│             │ ↑↓ / j k        move                             │             │"
"│             │ tab / ←→ / h l  switch pane                      │             │"
"│             │ enter           select the project               │             │"
"│             │ esc             back to projects                 │             │"
"│             │ /               filter the focused list          │             │"
"│             │ r               refresh now                      │             │"
"│             │ P               switch profile                   │             │"
"│             │ ?               this help                        │             │"
"│             │ q / ctrl+c      quit                             │             │"
"│             │                                                  │             │"
"│             │ any key closes this window                       │             │"
"│             └──────────────────────────────────────────────────┘             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" any key close                                                   updated 3s ago "
