src/tui/views/snapshots/runsite__tui__views__snapshot_tests__login_form_wide.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "render_text(&app, &unicode(), 120, 40)"
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                                                            "
" █▀▄ ▄▄█  profile: default                                                                                              "
"          https://api.runsite.app                                                                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                            ┌ Log in · profile: default ───────────────────────────────────┐                            "
"                            │Email + password    API key                                   │                            "
"                            │                                                              │                            "
"                            │Email     ada@example.com▏                                    │                            "
"                            │Password                                                      │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            │                                                              │                            "
"                            └──────────────────────────────────────────────────────────────┘                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" ctrl+←/→ tab · tab next field · enter log in · ctrl+c quit                                                             "
