src/tui/views/snapshots/runsite__tui__views__snapshot_tests__service_deploys_small.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "render_text(&app, &unicode(), 80, 24)"
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                    "
" █▀▄ ▄▄█  ada@example.com · profile: default                                    "
"          https://api.runsite.app                                               "
"┌ api · ● running ─────────────────────────────────────────────────────────────┐"
"│ 1 Overview   2 Logs   3 Deploys                                              │"
"│                                                                              │"
"│▸ ● running      3f2a9c1  main                2h ago    live                  │"
"│  ● running      7b3e0f2  main                2h ago    ready                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" enter details · esc back · ? help                               updated 0s ago "
