src/tui/views/snapshots/runsite__tui__views__snapshot_tests__service_logs.snap
---
source: src/tui/views/snapshot_tests.rs
expression: screen
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                                                            "
" █▀▄ ▄▄█  ada@example.com · profile: default                                                                            "
"          https://api.runsite.app                                                                                       "
"┌ api · ● running ─────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Overview   2 Logs   3 Deploys                                                                                      │"
"│                                                                                                                      │"
"│Showing logs from the newest instance · follow on · wrap on                                                           │"
"│10:00:01 GET /health 200                                                                                              │"
"│10:00:02 GET /api/users 500                                                                                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" / search · f follow · w wrap · c clear · esc back · ? help                                              updated 0s ago "
